Fixed keyword matching Return tree instead of node in case of non match Improved some parse error tests